VDR Plugin 'markad' Revision History
----------------------------------

2020-07-xx: Version 2.3.2
- detect faster if logo is invisible
- fix get correct eventID for VPS feature
- some minor bug fixes and optimizations, see git

2020-07-01: Version 2.3.1
- add support for video codec H.265
- optimize overlap detection
- some minor bug fixes and optimizations, see git

2020-06-06: Version 2.3.0
- add feature VPS start and stop marks

2020-06-22: Version 2.2.0
- remove classic decoder per compiler option (see Makefile)
- remove genindex function
- some minor bug fixes and optimizations, see git

2020-06-18: Version 2.1.4
- improved logo search function with --autolog > 0
- fix cut function for recording with missing subtitle decoder or encoder
- some minor bug fixes and optimizations, see git

2020-06-12: Version 2.1.3
- remove support of VDR version 1.x
- fix memory leak 14 bytes per recording
- add function to debug heap memory consumption of the plugin
  uncomment DEBUGMEMPLUGIN=1 in plugin/Makefile
  show memory usage with svdrpsend PLUG markad DEBUGMEM
- code optimizations based on ccpcheck output
- some minor bug fixes and optimizations, see git

2020-06-04: Version 2.1.2
- fix marks for channels who always send AC3 with 6 channels
  change of value Cx to Dx in logo file for channels that continuously transmit 6 audio channels is no longer necessary
- move classic decoder code into compiler directive (default is compile with this code)
- some minor bug fixes and optimizations, see git

2020-05-28: Version 2.1.1
- fix load logo plane > 0 from logo cache directory
- declare --genindex as depreciated
- remove some parameter without function
- some minor bug fixes and optimizations, see git

2020-05-23: Version 2.1.0
- increase AC3 volume +3dB on --ac3reencode (need libavfilter-dev to build)
- some minor bug fixes and optimizations, see git

2020-05-01: Version 2.0.4
- consider pixel aspect ratio for MPEG-4 PAL
- add script to run markad on video directory